fix gallery spacing

--- a/api/_lib/template.css
+++ b/api/_lib/template.css
@@ -107,4 +107,5 @@ body {
 
 .profile .gallery {
   display: flex;
+  justify-content: space-between;
 }
